# Velvet

./: .gitignore  CMakeLists.txt
Velvet/: Actor.hpp  Common.cuh  Common.hpp  Component.cpp  Component.hpp  GUI.cpp  GameInstance.cpp  GameInstance.hpp  Helper.cpp  Helper.hpp  Material.hpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  ParticleInstancedRenderer.hpp  PlayerController.hpp  Resource.hpp  Scene.hpp  SpatialHashGPU.hpp  Timer.hpp  VtBuffer.hpp  VtClothSolverCPU.hpp  VtClothSolverGPU.hpp  VtEngine.cpp  VtEngine.hpp
